# net-game

./: .gitignore  Cargo.toml  Makefile  README.md
launcher/: pom.xml
launcher/src/main/java/dev/nylander/netgame/: Launcher.java  LauncherController.java  Main.java
launcher/src/main/resources/dev/nylander/netgame/: launcher.fxml
src/: main.rs
src/game/: client.rs  graphics.rs  menu.rs  mod.rs  server.rs
src/game/ecs/: collision.rs  color.rs  control.rs  death.rs  health.rs  item.rs  mod.rs  npc.rs  position.rs  scale.rs  ttl.rs  velocity.rs
src/game/ecs/prefabs/: bullet.rs  items.rs  mod.rs  player.rs  wall.rs
src/misc/: constants.rs  mod.rs  state.rs  typeset.rs
src/net/: connection.rs  event.rs  mod.rs  protocol.rs
src/test/net/: mod.rs
