[package]
name = "netgame"
version = "0.1.0"
authors = ["rasmussn <rasmussn@kth.se>", "vstenm <vstenm@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
lazy_static = "1.4.0"
rand = "0.8.3"
nalgebra = "0.10.1"
collider = "0.3.1"
